fix(zola): delete semicolons from sass file
- Semicolons in `sass/_bulma.sass` are delete.

--- a/zola/sass/_bulma.sass
+++ b/zola/sass/_bulma.sass
@@ -10,15 +10,15 @@
 // @import "bulma/layout/_all"
 
 // picks only necessary components to minimize the resulting CSS.
-@import "bulma/base/_all";
-@import "bulma/utilities/_all";
-@import "bulma/components/_card";
-@import "bulma/components/_navbar";
-@import "bulma/components/_pagination";
-@import "bulma/elements/_container";
-@import "bulma/elements/_content";
-@import "bulma/elements/_title";
-@import "bulma/grid/_columns";
-@import "bulma/layout/_footer";
-@import "bulma/layout/_hero";
-@import "bulma/layout/_section";
+@import "bulma/base/_all"
+@import "bulma/utilities/_all"
+@import "bulma/components/_card"
+@import "bulma/components/_navbar"
+@import "bulma/components/_pagination"
+@import "bulma/elements/_container"
+@import "bulma/elements/_content"
+@import "bulma/elements/_title"
+@import "bulma/grid/_columns"
+@import "bulma/layout/_footer"
+@import "bulma/layout/_hero"
+@import "bulma/layout/_section"
