--- a/zola/sass/_theme.scss
+++ b/zola/sass/_theme.scss
@@ -6,8 +6,13 @@ $codemonger-tint: #e8d7d1 !default;
 $codemonger-shade: #e6e0dc !default;
 $codemonger-link: #554d99 !default;
 
+$twitter-blue: #1d9bf0 !default;
+$twitter: $twitter-blue !default;
+$twitter-invert: #fff !default;
+
 /* custom color sets for Bulma. */
 $custom-colors: (
   'codemonger': ($codemonger, $codemonger-invert),
-  'codemonger-tint': ($codemonger-tint, $codemonger-invert)
+  'codemonger-tint': ($codemonger-tint, $codemonger-invert),
+  'twitter': ($twitter, $twitter-invert)
 );
