--- a/zola/sass/styles.scss
+++ b/zola/sass/styles.scss
@@ -1,7 +1,8 @@
-@import "_fonts";
-@import "_theme";
-@import "_bulma";
-@import "_bulma-extensions";
+@import "fonts";
+@import "theme";
+@import "bulma";
+@import "bulma-extensions";
+@import "fontawesome";
 
 body {
   margin: 0 0;
@@ -23,6 +24,14 @@ p {
 .title,
 .subtitle {
   @include monospace-font;
+}
+
+// Tweet button
+.is-twitter {
+  span {
+    font-family: 'Helvetica Neue', Arial, sans-serif;
+    font-weight: 500;
+  }
 }
 
 // markdown content
