--- a/zola/templates/blog-page.html
+++ b/zola/templates/blog-page.html
@@ -14,4 +14,17 @@
     </div>
   </div>
 </section>
+<section class="section blog-footer">
+  <div class="is-flex is-justify-content-center">
+    <a
+      class="button is-twitter is-small"
+      href="https://twitter.com/intent/tweet?text=codemonger%20{{ trans(key="blog", lang=lang) | urlencode }}%20-%20{{ page.title | urlencode }}&url={{ current_url | urlencode }}" target="_blank"
+    >
+      <span class="icon">
+        <i class="fab fa-twitter"></i>
+      </span>
+      <span>Tweet</span>
+    </a>
+  </div>
+</section>
 {% endblock content %}
