--- a/zola/templates/blog-page.html
+++ b/zola/templates/blog-page.html
@@ -7,7 +7,16 @@
       <h1 class="title">
         {{ page.title }}
       </h1>
-      <p class="subtitle"><strong>{{ page.date }}</strong></p>
+      <p class="subtitle">
+        <strong>{{ page.date }}</strong>
+        {% if page.updated %}
+        {%   if lang == "ja" %}
+        <span>({{ page.updated }} 更新)</span>
+        {%   else %}
+        <span>(Updated on {{ page.updated }})</span>
+        {%   endif %}
+        {% endif %}
+      </p>
     </header>
     <div class="content">
       {{ page.content | safe }}
