docs(zola): translate Tweet button → ja
- The title of a Tweet button is translated into Japanese.

--- a/zola/templates/blog-page.html
+++ b/zola/templates/blog-page.html
@@ -38,7 +38,7 @@
       <span class="icon">
         <i class="fab fa-twitter"></i>
       </span>
-      <span>Tweet</span>
+      <span>{{ trans(key="tweet_v", lang=lang) }}</span>
     </a>
   </div>
 </section>
