fix(zola): page folder support
- The bug that `zola serve` failed when a blog post was written using a
  folder style is fixed. The error occurred because a wrong parameter
  was given to `get_url` for a folder style page. `base.html` tests if
  the relative path of the page ends with `/index(.lang)?.md` so that it
  can choose a correct suffix for a folder style page.

issue codemonger-io/codemonger#22

--- a/zola/templates/base.html
+++ b/zola/templates/base.html
@@ -49,7 +49,11 @@
           {%   else %}
           {%     set relative_path = page.components | slice(start=1) | join(sep="/") %}
           {%   endif %}
-          {%   set internal_path = "@/" ~ relative_path ~ ".md" %}
+          {%   if page.relative_path is matching("/index(?:\.\w+)?\.md$") %}
+          {%     set internal_path = "@/" ~ relative_path ~ "/index.md" %}
+          {%   else %}
+          {%     set internal_path = "@/" ~ relative_path ~ ".md" %}
+          {%   endif %}
           {% else %}
           {%   if section.components | length  > 0 %}
           {%     if lang == config.default_language %}
