docs(zola): add thumbnail
- Adds the thumbnail feature to blogs. A blog page can have a new extra
  option `thumbnail_name` that specifies the path to the thumbnail image
  of the blog post. `thumbnail_name` should not include the parent
  (`../`) or current (`./`) folder segment. `base.html` introduces meta
  tags so that SNS services can show a thumbnail image of the blog post.
  `blog-page.html` shows the thumbnail image just after the title and
  date.
- Imports `bulma/elements/_image.sass` because `blog-page.html` uses the
  `image` class.

issue codemonger-io/codemonger#16

--- a/zola/sass/_bulma.sass
+++ b/zola/sass/_bulma.sass
@@ -20,6 +20,7 @@
 @import "bulma/elements/_container"
 @import "bulma/elements/_content"
 @import "bulma/elements/_icon"
+@import "bulma/elements/_image"
 @import "bulma/elements/_title"
 @import "bulma/grid/_columns"
 @import "bulma/helpers/_flexbox"
