docs(zola): fix at → on (base.html)
- Replaces "at GitHub" with "on GitHub" in `templates/base.html`.

--- a/zola/templates/base.html
+++ b/zola/templates/base.html
@@ -109,7 +109,7 @@
       <div class="column is-half">
         Powered by <a href="https://www.getzola.org">Zola</a>, and <a href="https://bulma.io">Bulma</a>.
         {% if lang != "ja" %}
-        Source code of this site is available at <a href="https://github.com/codemonger-io/codemonger">GitHub</a>.
+        Source code of this site is available on <a href="https://github.com/codemonger-io/codemonger">GitHub</a>.
         {% else %}
         このサイトのソースコードは<a href="https://github.com/codemonger-io/codemonger">GitHub</a>で入手できます。
         {% endif %}
