--- a/zola/sass/styles.scss
+++ b/zola/sass/styles.scss
@@ -77,8 +77,13 @@ p {
     &:hover {
       color: bulmaLighten($codemonger-invert, 15%);
     }
-    & > code {
+    & code {
       color: inherit;
+    }
+  }
+  strong {
+    & code {
+      font-weight: 700;
     }
   }
   table {
