fix(zola): extra slash before product logo path
- Fixes the issue that the product logo was not shown on the development
  deployment. Removes an extra slash before the product logo path.

--- a/zola/templates/product.html
+++ b/zola/templates/product.html
@@ -13,7 +13,7 @@
           <div class="card-image">
             <figure class="image">
               <a href="{{ page.permalink | safe }}">
-                <img src="{{ page.path }}/{{ page.extra.thumbnail_name }}" alt="{{ page.title }}">
+                <img src="{{ page.path }}{{ page.extra.thumbnail_name }}" alt="{{ page.title }}">
               </a>
             </figure>
           </div>
