--- a/zola/sass/styles.scss
+++ b/zola/sass/styles.scss
@@ -125,7 +125,7 @@ p {
 
     .content {
       /* makes the product summary bold and overlap the product logo. */
-      p:first-of-type {
+      > p:first-of-type {
         position: absolute;
         top: calc(100vh - 6.5em);
         font-weight: 700;
@@ -135,7 +135,7 @@ p {
         background-color: $codemonger;
 
         @media only screen and (max-height: 450px) {
-          top: calc(100vh - 4.5em);
+          top: calc(100vh - 5.0em);
         }
       }
     }
