--- a/zola/sass/styles.scss
+++ b/zola/sass/styles.scss
@@ -101,6 +101,19 @@ p {
       }
     }
   }
+  .footnote-definition {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: flex-start;
+    sup {
+      display: block;
+      margin-right: 0.5em;
+    }
+    > p {
+      font-size: 80%;
+    }
+  }
 }
 
 .product-content {
