--- a/zola/templates/base.html
+++ b/zola/templates/base.html
@@ -63,6 +63,8 @@
           {% set subsection = get_section(path=section_path) %}
           <a class="navbar-item" href="{{ subsection.permalink | safe }}">{{ subsection.title }}</a>
           {% endfor %}
+          {% set about_page = get_page(path="about" ~ lang_ext ~ ".md") %}
+          <a class="navbar-item" href="{{ about_page.permalink | safe }}">{{ about_page.extra.short_title }}</a>
         </div>
         <div class="navbar-end">
           {% if page %}
@@ -101,12 +103,8 @@
     {% block content %} {% endblock %}
   </div>
   <footer class="footer is-codemonger-tint">
-    <div class="columns">
-      <div class="column is-half">
-        {% set about_page = get_page(path="about" ~ lang_ext ~ ".md") %}
-        <a href="{{ about_page.permalink | safe }}">{{ about_page.title }}</a>
-      </div>
-      <div class="column is-half">
+    <div class="is-flex is-justify-content-flex-end">
+      <div>
         Powered by <a href="https://www.getzola.org">Zola</a>, and <a href="https://bulma.io">Bulma</a>.
         {% if lang != "ja" %}
         Source code of this site is available on <a href="https://github.com/codemonger-io/codemonger">GitHub</a>.
